Github actions: try a static build of qmlls
Also only compile qmlls, not all of the repos.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Qmlls build
+name: Build qmlls
 
 on: push
 
@@ -119,10 +119,10 @@ jobs:
       run:  mkdir build
     - name: configure
       working-directory: build
-      run:  "../source/configure -opensource -confirm-license -ccache -no-pch -release -submodules qtdeclarative -init-submodules -nomake tests -nomake examples -prefix '${{ runner.temp }}'/install_dir ${{ matrix.configure_flags }}"
+      run:  "../source/configure -opensource -confirm-license -ccache -no-pch -release -static -submodules qtdeclarative -init-submodules -nomake tests -nomake examples -prefix '${{ runner.temp }}'/install_dir ${{ matrix.configure_flags }}"
     - name: ninja
       working-directory: build
-      run: ninja
+      run: ninja qmlls
 
     - name: various stats
       # Print ccache utilization statistics, then reset them.
