--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,10 @@ jobs:
       run: echo noop
     - name: prepare Windows
       if: runner.os == 'Windows'
+      shell: cmd
       run: |
-        "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-        env >> "$GITHUB_ENV"
+        call "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+        set >> "%GITHUB_ENV%"
 
 
     - uses: actions/checkout@v4
