force bundled libs
Clean up configure flags.
Add some ### comments.

Change-Id: Ie231d093cf8658481da1b9a6dd07b4340a0cb6f5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,25 +19,27 @@ jobs:
         include:
           - name: ubuntu-20.04
             os:   ubuntu-20.04
-            # NOTE: system libmd4c is not detected on ubuntu-latestt 
+            # NOTE: system libmd4c is not detected on ubuntu-latest
             deps:  libgl-dev libglu-dev 'libxcb*-dev' libx11-xcb-dev libxkbcommon-x11-dev libpcre2-dev libz-dev libfreetype6-dev libpng-dev libjpeg-dev libsqlite3-dev libharfbuzz-dev libb2-dev libdouble-conversion-dev libmd4c-dev
             # NOTE: yq is preinstalled on that image
             tools: ninja-build ccache
             install_cmd: sudo apt-get -y install
-            configure_flags: -xcb -system-sqlite -system-pcre -system-zlib -system-freetype -system-libpng -system-libjpeg -system-harfbuzz -system-libb2 -system-doubleconversion -system-libmd4c
+            configure_flags: -xcb
           - name: macos-latest
             os:   macos-latest
+            ### I think we can drop these deps
             deps:  jpeg sqlite libpng pcre2 harfbuzz freetype libb2 double-conversion
             tools: ninja ccache pkg-config yq
             install_cmd: HOMEBREW_NO_INSTALL_CLEANUP=1 brew install
+            ### I think we can drop pkg-config
             # Specifically on macOS pkg_config has to be manually turned on otherwise libraries under /usr/local are not detected.
-            configure_flags: -pkg-config -system-sqlite -system-pcre -system-zlib -system-freetype -system-libpng -system-libjpeg -system-harfbuzz -system-libb2 -system-doubleconversion
+            configure_flags: -pkg-config
           - name: windows-latest/
             os:   windows-latest
             install_cmd: choco install
             install_cmd_postfix: --yes --no-progress
             tools: ninja ccache yq
-            configure_flags: -qt-sqlite -qt-pcre -qt-zlib -qt-freetype -qt-libpng -qt-libjpeg -qt-harfbuzz -no-feature-sql-psql -no-feature-sql-mysql -no-feature-sql-odbc
+            configure_flags: -no-feature-sql-psql -no-feature-sql-mysql -no-feature-sql-odbc
     runs-on: ${{ matrix.os }}
 
 
@@ -128,7 +130,7 @@ jobs:
       run:  mkdir build
     - name: configure
       working-directory: build
-      run:  "../source/configure -opensource -confirm-license -ccache -no-pch -release -static -submodules qtdeclarative -nomake tests -nomake examples -prefix '${{ runner.temp }}'/install_dir ${{ matrix.configure_flags }}"
+      run:  "../source/configure -ccache -no-pch -release -static -force-bundled-libs -submodules qtdeclarative -nomake tests -nomake examples -prefix '${{ runner.temp }}'/install_dir ${{ matrix.configure_flags }}"
     - name: ninja
       working-directory: build
       run: ninja qmlls
