--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,7 +107,7 @@ jobs:
 
     - name: initialize subrepositories
       working-directory: source
-      run:  perl init-repository --module-subset=qtdeclarative
+      run:  ./init-repository --module-subset=qtdeclarative
 
     - name: set qtdeclarative to dev and set dependencies via dependencies.yaml
       working-directory: source/qtdeclarative
