Set mirror for init-repository
So I don't have to fork the repos.

Change-Id: I968e7fa81f3bdd371d52ae1a4949a3ae3fa6d5ba

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,7 +107,7 @@ jobs:
 
     - name: initialize subrepositories
       working-directory: source
-      run:  ./init-repository --module-subset=qtdeclarative,qtshadertools,qtlanguageserver --no-optional-deps
+      run:  ./init-repository --module-subset=qtdeclarative,qtshadertools,qtlanguageserver --no-optional-deps --mirror="https://code.qt.io/qt/"
 
     - name: set qtdeclarative to dev and set dependencies via dependencies.yaml
       working-directory: source/qtdeclarative
